Update IMGBB API key in index.html
Replaced placeholder API key with actual IMGBB API key.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         tg.expand();
 
         // 🔴🔴🔴 کلید API خود را اینجا بگذارید 🔴🔴🔴
-        const IMGBB_API_KEY = "YOUR_API_KEY"; 
+        const IMGBB_API_KEY = "cdf0aa3b285e7f59c86497ebeca1ef93"; 
 
         let userLoc = { lat: 0, long: 0 };
         let uploadedImageUrl = "";
