Change IMGBB API key in index.html
Updated the IMGBB API key in index.html.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <script>
         // 🔴🔴🔴 اینجا کلید ImgBB خودتان را بگذارید 🔴🔴🔴
-        const IMGBB_KEY = "YOUR_IMGBB_API_KEY"; 
+        const IMGBB_KEY = "cdf0aa3b285e7f59c86497ebeca1ef93"; 
         
         // کلیدهای دیتابیس ابری (پر شده)
         const BIN_ID = "6967e3d043b1c97be930be0f";
