Update IMGBB and BIN IDs in index.html
Replaced placeholder API keys with actual values.

--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
 
     <script>
         // 🔴🔴🔴 کلیدهای شما (جایگذاری شود) 🔴🔴🔴
-        const IMGBB_KEY = "YOUR_IMGBB_API_KEY"; 
-        const BIN_ID = "YOUR_BIN_ID"; 
+        const IMGBB_KEY = "cdf0aa3b285e7f59c86497ebeca1ef93"; 
+        const BIN_ID = "6967e3d043b1c97be930be0f"; 
         const MASTER_KEY = "$2a$10$qkOl1I02u1dd9Juv25BMv.IsrpbnJq2vYlA.XxkmrvcMdd6G/Iv8q";
 
         const tg = window.Telegram.WebApp;
